# github-issue-automation

./: .gitignore  readme.md
backend/: .env.example  edit issue data.json  issue open data.json  lebel add data.json  main.py  portia_setup.py  pyproject.toml  supabase_client.py
client/: .env.example  build.sh  package-lock.json  package.json  tsconfig.app.json  vercel.json  vite.config.ts
client/database/: schema.sql
client/src/: App.tsx  index.css
client/src/components/: AutomationStatusBadge.tsx  GitHubAuth.tsx  GitHubRepositoryBrowser.tsx  LoadingSpinner.tsx  ManualWebhookGuide.tsx  MarkdownRenderer.tsx  Navbar.tsx  ProtectedRoute.tsx  RepositoryAccessStatus.tsx  WebhookSetup.tsx
client/src/lib/: api.ts  mockRepository.ts  supabase.ts
client/src/pages/: AuthPage.tsx  DashboardPage.tsx  IssuesPage.tsx
client/src/store/: index.ts
client/src/store/slices/: authSlice.ts  issuesSlice.ts  repositorySlice.ts
